--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   "author": "LouisLallier <louis.lallier@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.5",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "prettier": "^2.4.0",
+    "validator": "^13.6.0"
   }
 }
