--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "LouisLallier <louis.lallier@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
